# DocuSound

./: .flake8  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
app-st/: app.py
docusound/: whisper_model_transcribe.py
tests/: test_hello_world.py
